--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ Tags: Contains regular Widget areas as well as preheaderwrap, home page Hero are
 Template: twentyfifteen
 */
 
+
+/* ADD COLORS */
+
+
 /* general */
 a{color:#2A2929;text-decoration:none}
 a:hover,.post-preview>a:hover, .post-preview>a:focus{color:#ddd}
