--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 /*
-Theme Name: twentyfifteen-child
-Description: UhUh is a vanilla base starter theme created for blog
-Author: Neil Gee
-Author URI: http://www.coolestguidesontheplanet.com/
+Theme Name: worthy
+Description: Based on free HTML template Worthy of http://www.htmlcoder.me
+Author: mthjn
+Author URI: http://github.com/mthjn
 Version: 0.0.1
-Tags: Contains regular Widget areas as well as preheaderwrap, home page Hero area, optin wrap and pre-footer widget content wrap
 Template: twentyfifteen
 */
 
@@ -13,10 +12,19 @@ Template: twentyfifteen
 
 
 /* general */
+.more-link{display:none;}
 a{color:#2A2929;text-decoration:none}
 a:hover,.post-preview>a:hover, .post-preview>a:focus{color:#ddd}
 .post-thumb img, .content img{width:100%;  padding: 50px 0 65px;}
-.page{margin-top:100px}
+.page{margin-top:30px}
+
+.site-heading h3 {padding-bottom: 15px;}
+/* banner */
+.page-image,.post-image {
+vertical-align: middle;
+min-height: 100%;
+width: 100%;
+}
 /* header */
 .site-heading a {text-decoration:none;color:white}
 
