--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ Template: twentyfifteen
 
 /* general */
 .more-link{display:none;}
-a{color:#2A2929;text-decoration:none}
+a{color:#2A2929;text-decoration:none!important}
 a:hover,.post-preview>a:hover, .post-preview>a:focus{color:#ddd}
 .post-thumb img, .content img{width:100%;  padding: 50px 0 65px;}
 .page{margin-top:30px}
